--- a/packages/pwa-kit-create-app/local-npm-repo/config.yaml
+++ b/packages/pwa-kit-create-app/local-npm-repo/config.yaml
@@ -30,4 +30,4 @@ publish:
   allow_offline: true
 
 logs:
-  - {type: file, path: ./verdaccio.log, level: warn}
+  - {type: file, path: ./verdaccio.log, level: debug}
