--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -173,7 +173,7 @@ commands:
             GENERATOR_PRESET: 'test-project'
           command: |
             set GENERATOR_PRESET=test-project
-            NODE_DEBUG=cluster,net,fs,module,timers node packages/pwa-kit-create-app/scripts/create-mobify-app-dev.js --outputDir generated-project
+            NODE_DEBUG=fs,module,timers node packages/pwa-kit-create-app/scripts/create-mobify-app-dev.js --outputDir generated-project
 
   save_verdaccio_log_as_artifacts:
     steps:
@@ -304,7 +304,7 @@ jobs:
             GENERATOR_PRESET: << parameters.template >>
           command: |
             set GENERATOR_PRESET=<< parameters.template >>
-            NODE_DEBUG=cluster,net,fs,module,timers node packages/pwa-kit-create-app/scripts/create-mobify-app-dev.js --outputDir generated-<< parameters.template >>
+            NODE_DEBUG=fs,module,timers node packages/pwa-kit-create-app/scripts/create-mobify-app-dev.js --outputDir generated-<< parameters.template >>
       - save_verdaccio_log_as_artifacts
   generatedTemplateWindows:
     parameters:
@@ -323,7 +323,7 @@ jobs:
             GENERATOR_PRESET: << parameters.template >>
           command: |
             set GENERATOR_PRESET=<< parameters.template >>
-            NODE_DEBUG=cluster,net,fs,module,timers node packages/pwa-kit-create-app/scripts/create-mobify-app-dev.js --outputDir generated-<< parameters.template >>
+            NODE_DEBUG=fs,module,timers node packages/pwa-kit-create-app/scripts/create-mobify-app-dev.js --outputDir generated-<< parameters.template >>
       - save_verdaccio_log_as_artifacts
   generatedSFCCProjectTest:
     docker:
@@ -385,9 +385,9 @@ workflows:
           context: nightly-build
           matrix:
             parameters:
-              template: [ express-minimal-test-project, typescript-minimal-test-project, test-project, retail-react-app-demo ]
+              template: [ express-minimal-test-project, typescript-minimal-test-project ]
       - generatedTemplateWindows:
           context: nightly-build
           matrix:
             parameters:
-              template: [ express-minimal-test-project, typescript-minimal-test-project, test-project, retail-react-app-demo ]
+              template: [ express-minimal-test-project, typescript-minimal-test-project ]
